--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medicinal Chemistry App</title>
-    <meta http-equiv="refresh" content="0;url=./client/index.html">
   </head>
   <body>
-    Redirecting...
+    <div id="root"></div>
+    <script type="module" src="./client/src/main.tsx"></script>
   </body>
 </html>
